--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ anyio==4.8.0
 asttokens==3.0.0
 bcrypt==4.2.1
 certifi==2025.1.31
+cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
 comm==0.2.2
+cryptography==44.0.1
 debugpy==1.8.12
 decorator==5.1.1
 dnspython==2.7.0
+ecdsa==0.19.0
 email_validator==2.2.0
 executing==2.2.0
 fastapi==0.115.8
@@ -40,19 +43,24 @@ prompt_toolkit==3.0.50
 psutil==7.0.0
 psycopg2-binary==2.9.10
 pure_eval==0.2.3
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.10.6
 pydantic-extra-types==2.10.2
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 pywin32==308
 PyYAML==6.0.2
 pyzmq==26.2.1
+redis==5.2.1
 rich==13.9.4
 rich-toolkit==0.13.2
+rsa==4.9
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
